# gdfmm

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
demo/: demo_lab_corr.py  demo_lab_orig.py  demo_rgb_corr.py  demo_rgb_orig.py  matplotlib
include/gdfmm/: gdfmm.h
python/: Makefile  gdfmm.pyx  setup.py  testgdfmm.py
src/: expcache.cc  gdfmm.cc  gdfmm.h  guided_filter.cc  test.cc
